--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1 {
 }
 
 .card {
-  border: 1px solid black;
+  border: 1px solid white;
   padding: 20px;
   width: 40%;
 }
@@ -42,3 +42,10 @@ h1 {
   background: darkred;
 }
 
+.facedown {
+  background: black;
+}
+
+.match {
+  border: 1px solid yellow;
+}
