shuffle function, DRYer event listeners

--- a/style.css
+++ b/style.css
@@ -50,9 +50,9 @@ h1 {
   background: slategrey;
 }
 
-/*.facedown {
+.facedown {
   background: black;
-}*/
+}
 
 .match {
   border: 1px solid yellow;
