--- a/style.css
+++ b/style.css
@@ -9,10 +9,27 @@ h1 {
 }
 
 #painted-table {
-  border: 1px solid red;
-  height: 500px;
+ /* border: 1px solid red;*/
+  height: 505px;
   width: 90%;
   margin: 0 auto;
+}
+
+.card {
+  border: 1px solid white;
+  padding: 20px;
+  width: 60px;
+  height: 60px;
+  margin: 10%;
+
+}
+
+.column {
+  padding: 2%; 
+  width: 15%;
+  float: left;
+  float: right;
+  margin: 0, auto;
 }
 
 a {
@@ -24,23 +41,6 @@ a {
   width: 20%;
   display: block;
   text-align: center;
-}
-
-.card {
-  border: 1px solid white;
-  padding: 20px;
-  width: 50px;
-  height: 50px;
-  margin: 10%;
-
-}
-
-.column {
-  padding: 2%; 
-  width: 15%;
-  float: left;
-  float: right;
-  margin: 0, auto;
 }
 
 .stark {
@@ -63,10 +63,34 @@ a {
   background: slategrey;
 }
 
-.facedown {
+.nightswatch {
   background: black;
+}
+
+.tyrell {
+  background: blue;
+}
+
+.dothraki {
+  background: blanchedalmond;
+}
+
+.martell {
+  background: orange;
+}
+
+.tully {
+  background: navy;
+}
+
+.facedown {
+  background: white;
 }
 
 .match {
   border: 1px solid yellow;
 }
+
+
+
+
